--- a/Week4/templates/index.html
+++ b/Week4/templates/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{{ url_for('static', filename='css/tailwind.css') }}" rel="stylesheet">
     <title>Home</title>
 </head>
 
 <body>
-    <h1>Home</h1>
-    <p>Welcome to Mai website!</p>
+    <h1>Welcome to Mai website!</h1>
     <a href="/file">Link to Data</a>
+    <h1 class="text-4xl font-bold text-blue-500">Hello, Tailwind!</h1>
 </body>
 
 </html>
