--- a/Week4/templates/index.html
+++ b/Week4/templates/index.html
@@ -4,14 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ url_for('static', filename='css/tailwind.css') }}" rel="stylesheet">
-    <title>Home</title>
+    <link href="/static/css/styles.css" rel="stylesheet">
+    <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon">
+    <title>Welcome to Mai's Website</title>
 </head>
 
-<body>
-    <h1>Welcome to Mai website!</h1>
-    <a href="/file">Link to Data</a>
-    <h1 class="text-4xl font-bold text-blue-500">Hello, Tailwind!</h1>
-</body>
+<body class="bg-indigo-300">
+    <header class="placeholder-sky-300 py-7">
+        <h1 class="text-8xl font-mono text-center text-black">Welcome to Mai's Website!</h1>
+    </header>
 
+    <main class="max-w-4xl mx-auto p-4 flex justify-center items-center min-h-screen">
+        <div class="w-full max-w-lg p-6 bg-white rounded-lg shadow-lg">
+            <p class="text-center text-xl text-gray-700 mb-4">Explore the features of this site and dive into the data section below.</p>
+
+            <nav class="mt-6 text-center">
+                <a href="/file" class="text-indigo-500 hover:text-indigo-700 hover:underline text-lg block mb-2">
+                    Access User Data
+                </a>
+              
+            </nav>
+            <nav class="mt-6 text-center">
+                <a href="/spotify" class="text-indigo-500 hover:text-indigo-700 hover:underline text-lg">
+                    Access Spotify Data
+                </a>
+            </nav>
+
+            <form action="/upload" method="POST" enctype="multipart/form-data" class="mt-6 text-center">
+                <input type="file" name="file" class="border border-pink-500 rounded p-2 mb-4" />
+                <br />
+                <button type="submit" class="bg-indigo-500 text-white px-4 py-2 rounded hover:bg-indigo-700">
+                    Upload
+                </button>
+            </form>
+        </div>
+    </main>
+
+    <footer class="placeholder-sky-800 py-4 text-center text-white">
+        <p>&copy; 2025 Mai's Website. All rights reserved.</p>
+    </footer>
+</body>
 </html>
